minor affine functional bug