@@ -1,16 +1,32 @@
 @echo off
-:: John Alan McDonald
-:: 2016-04-21
-set PROF=-Xrunhprof:cpu=samples,depth=32,thread=y,doe=y
-::set PROF=
-::set SIZE=12288m
+:: palisades.lakes (at) gmail (dot) com
+:: 2017-10-09
 
-set SIZE=4096m
-set XMX=-Xms1024m -Xmx%SIZE%
-set CP=-cp ./src/scripts/clojure;./src/test/clojure;./src/test/resources;lib/*
-set ASSERT=-ea -da:org.geotools... -da:org.opengis...
+::set GC=-XX:+AggressiveHeap -XX:+UseStringDeduplication 
+set GC=
+
+set COMPRESSED=
+::set COMPRESSED=-XX:CompressedClassSpaceSize=3g 
+
+set TRACE=
+::set TRACE=-XX:+PrintGCDetails -XX:+TraceClassUnloading -XX:+TraceClassLoading
+
+set PROF=
+::set PROF=-Xrunhprof:cpu=samples,depth=128,thread=y,doe=y
+
+::set THRUPUT=-d64 -server -XX:+AggressiveOpts 
+set THRUPUT=-d64 -server
+::set THRUPUT=
+
+::set XMX=-Xms29g -Xmx29g -Xmn11g 
+set XMX=-Xms12g -Xmx12g -Xmn5g 
+
+set OPENS=--add-opens java.base/java.lang=ALL-UNNAMED
+set CP=-cp ./src/scripts/clojure;lib/*
+
+set JAVA_HOME=%JAVA9%
 set JAVA="%JAVA_HOME%\bin\java"
 
-set CMD=%JAVA% -server %ASSERT% %PROF% %OPT% %PERM% %GC% %XMX% %CP% clojure.main %*
-echo %CMD%
+set CMD=%JAVA% %THRUPUT% -ea -dsa -Xbatch %GC% %PROF% %XMX% %COMPRESSED% %TRACE% %OPENS% %CP% clojure.main %*
+::echo %CMD%
 %CMD%
